Update DockerBuildAndPush.yml for Azure Pipelines

--- a/DockerBuildAndPush.yml
+++ b/DockerBuildAndPush.yml
@@ -15,5 +15,5 @@ extends:
   parameters:
     projectName: 'TeamBicep.WebApi'
     dockerfilePath: 'src/TeamBicep.WebApi/Dockerfile'
-    contextPath: 'TeamBicep.WebApi'
+    contextPath: 'src/TeamBicep.WebApi'
     imageRepository: 'TeamBicep/Backend'
