--- a/src/TeamBicep.WebApi/Dockerfile
+++ b/src/TeamBicep.WebApi/Dockerfile
@@ -7,15 +7,15 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["TeamBicep.WebApi/TeamBicep.WebApi.csproj", "TeamBicep.WebApi/"]
-RUN dotnet restore "TeamBicep.WebApi/TeamBicep.WebApi.csproj"
+COPY ["TeamBicep.WebApi.csproj", "./"]
+RUN dotnet restore
+
 COPY . .
-WORKDIR "/src/TeamBicep.WebApi"
-RUN dotnet build "./TeamBicep.WebApi.csproj" -c $BUILD_CONFIGURATION -o /app/build
+RUN dotnet build "TeamBicep.WebApi.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./TeamBicep.WebApi.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "TeamBicep.WebApi.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
