Added Todo Api endpoint, created collection

--- a/src/TeamBicep.WebApi/appsettings.Development.json
+++ b/src/TeamBicep.WebApi/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+
+  },
+  "Mongo": {
+    "ConnectionString": "mongodb+srv://teambicep:bicep12345@node-api-mongodb.eozli.mongodb.net/?retryWrites=true&w=majority&appName=node-api-mongodb",
+    "Database": "ToDoDB"
   }
 }
